Обновление из antlr + рефакторинг (#19)
* корректировки 4.13.2.7

* рефакторинг